--- a/css/ppm-pinterest.css
+++ b/css/ppm-pinterest.css
@@ -1,1 +1,1 @@
-.pp_social .pinterest{float:left; overflow:hidden;}
+.pp_social .pinterest{float:left; margin-left:5px; overflow:hidden; width:60px; }
